logs/dag_id=PRCS_TEST_FRAMEWORK1/run_id=manual__2024-12-15T12:58:48.176275+00:00/task_id=ExecuteNotebook/attempt=3.log
[2024-12-15T13:04:27.352+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2024-12-15T13:04:27.357+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: PRCS_TEST_FRAMEWORK1.ExecuteNotebook manual__2024-12-15T12:58:48.176275+00:00 [queued]>
[2024-12-15T13:04:27.360+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: PRCS_TEST_FRAMEWORK1.ExecuteNotebook manual__2024-12-15T12:58:48.176275+00:00 [queued]>
[2024-12-15T13:04:27.360+0000] {taskinstance.py:2866} INFO - Starting attempt 3 of 8
[2024-12-15T13:04:27.364+0000] {taskinstance.py:2889} INFO - Executing <Task(PythonOperator): ExecuteNotebook> on 2024-12-15 12:58:48.176275+00:00
[2024-12-15T13:04:27.367+0000] {logging_mixin.py:190} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:70 DeprecationWarning: This process (pid=31318) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-12-15T13:04:27.368+0000] {standard_task_runner.py:72} INFO - Started process 31331 to run task
[2024-12-15T13:04:27.367+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'PRCS_TEST_FRAMEWORK1', 'ExecuteNotebook', 'manual__2024-12-15T12:58:48.176275+00:00', '--job-id', '1871', '--raw', '--subdir', 'DAGS_FOLDER/script/PRCS_TEST_FRAMEWORK1.py', '--cfg-path', '/tmp/tmpz5kp4o88']
[2024-12-15T13:04:27.368+0000] {standard_task_runner.py:105} INFO - Job 1871: Subtask ExecuteNotebook
[2024-12-15T13:04:27.388+0000] {task_command.py:467} INFO - Running <TaskInstance: PRCS_TEST_FRAMEWORK1.ExecuteNotebook manual__2024-12-15T12:58:48.176275+00:00 [running]> on host 6418ebfba5fb
[2024-12-15T13:04:27.415+0000] {taskinstance.py:3132} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='test-framework' AIRFLOW_CTX_DAG_ID='PRCS_TEST_FRAMEWORK1' AIRFLOW_CTX_TASK_ID='ExecuteNotebook' AIRFLOW_CTX_EXECUTION_DATE='2024-12-15T12:58:48.176275+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-12-15T12:58:48.176275+00:00'
[2024-12-15T13:04:27.415+0000] {taskinstance.py:731} INFO - ::endgroup::
[2024-12-15T13:04:27.423+0000] {base.py:84} INFO - Retrieving connection 'postgres_localhost'
[2024-12-15T13:04:27.430+0000] {base.py:84} INFO - Retrieving connection 'postgres_localhost'
[2024-12-15T13:04:27.434+0000] {taskinstance.py:3311} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 417, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/script/PRCS_TEST_FRAMEWORK1.py", line 72, in execute_notebook
    Framework.Utility.UpdateLogProcess(controller.prcs_nm, cal_dt, datetime.now(), 0, f"Success run at {datetime.now()}")
  File "/opt/airflow/dags/framework/dwh.py", line 203, in UpdateLogProcess
    cusor.execute(query, values)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 4: ...RK1' and start_dt = '2024-12-15T13:04:27.420370'::timestamp)
                                                                      ^

[2024-12-15T13:04:27.439+0000] {taskinstance.py:1225} INFO - Marking task as UP_FOR_RETRY. dag_id=PRCS_TEST_FRAMEWORK1, task_id=ExecuteNotebook, run_id=manual__2024-12-15T12:58:48.176275+00:00, execution_date=20241215T125848, start_date=20241215T130427, end_date=20241215T130427
[2024-12-15T13:04:27.445+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2024-12-15T13:04:27.446+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 1871 for task ExecuteNotebook (syntax error at or near ")"
LINE 4: ...RK1' and start_dt = '2024-12-15T13:04:27.420370'::timestamp)
                                                                      ^
; 31331)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 116, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3005, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3159, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3183, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 417, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/script/PRCS_TEST_FRAMEWORK1.py", line 72, in execute_notebook
    Framework.Utility.UpdateLogProcess(controller.prcs_nm, cal_dt, datetime.now(), 0, f"Success run at {datetime.now()}")
  File "/opt/airflow/dags/framework/dwh.py", line 203, in UpdateLogProcess
    cusor.execute(query, values)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 4: ...RK1' and start_dt = '2024-12-15T13:04:27.420370'::timestamp)
                                                                      ^

[2024-12-15T13:04:27.468+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2024-12-15T13:04:27.482+0000] {taskinstance.py:3895} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-12-15T13:04:27.483+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
